--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,6 +7,8 @@ workflows:
       groups:
         - google_credentials
       flutter: stable
+      flutter:
+        main: lib/Activation.dart
       xcode: latest
       cocoapods: default
       vars:
