--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
 
     // https://developer.android.com/jetpack/androidx/releases/test/#1.2.0
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
