--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,6 +4,7 @@ workflows:
     instance_type: mac_mini_m1
     max_build_duration: 30
     environment:
+      java: 17
       groups:
         - google_credentials
       flutter: stable
@@ -35,7 +36,7 @@ workflows:
             --type instrumentation \
             --app build/app/outputs/apk/debug/app-debug.apk \
             --test build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
-            --timeout 3m
+            --timeout 15m
 
     artifacts:
       - build/**/outputs/**/*.apk
